syntax = "proto3";

package domain.value_objects.base64_image;

import "protoc-gen-openapiv2/options/annotations.proto";

message Base64Image {
	string data = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		description: "The image data encoded in base64."
		format: "string",
		example: "iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAABjElEQVRIS+2VvUoDQRCFv7/"
	}];
}
